--- a/styless.css
+++ b/styless.css
@@ -2,3 +2,12 @@
     margin: 0;
     padding: 0;
 }
+
+h1 {
+    text-align: center;
+    font-size: 3rem;
+    color: skyblue;
+    padding: 1rem;
+    background-color: #000;
+}
+
