--- a/styless.css
+++ b/styless.css
@@ -6,7 +6,7 @@
 h1 {
     text-align: center;
     font-size: 3rem;
-    color: skyblue;
+    color: rgb(18, 63, 146);
     padding: 1rem;
     background-color: #000;
 }
